# centurion

./: CLAUDE.md  Cargo.toml  GAMEPLAY.md  GAMEPLAY_OVERHAUL.md  PROJECT_PLAN.md  README.md  TECH_DESIGN.md  WORKFLOW_GUIDE.md
.cargo/: config.toml
.claude/: CLAUDE.md
src/: config.rs  input.rs  lib.rs  main.rs  rendering.rs  state.rs
src/enemies/: components.rs  mod.rs  movement.rs
src/items/: components.rs  mod.rs
src/map_gen/: mod.rs  procgen.rs  room.rs
src/player/: components.rs  mod.rs
src/plugins/: mod.rs  state_plugin.rs
src/resolver/: combat.rs  flash.rs  mod.rs
src/tactics/: mod.rs  movement.rs
src/ui/: dead_screen.rs  hud.rs  mod.rs  rest_screen.rs  win_screen.rs
tasks/: CEN-001-foundation.md  CEN-002-game-state.md  CEN-004-player-entity.md  CEN-006-movement.md  CEN-009-combat.md  CEN-011-exit.md  CEN-012-rest.md  CEN-014-enemy-movement.md  CEN-015-procedural-generation.md  CEN-018-boss-reattivo-runa.md  CEN-019-combat-tie-survival.md  CEN-020-enemy-scaling-graduale.md  CEN-021-rest-recovery-minimo-5.md  CEN-022-score-formula-combat-items.md  CEN-023-whetstone-tier-up.md  CEN-024-analisi-bug-gestione-forza.md  CEN-025-endless-mode.md  QUEUE.md  TASK_BLUEPRINT.md
tasks/done/: CEN-003-map-gen.md  CEN-004-player-entity.md  CEN-005-input.md  CEN-007-hud.md  CEN-008-enemies.md  CEN-010-flash.md  CEN-013-dead.md  CEN-014-enemy-movement.md  CEN-016-rest-items-choices.md  CEN-017-endgame-win-condition.md  CEN-026-hud-boss-dinamico.md
