[package]
name = "centurion"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy_tweening = "0.12"
leafwing-input-manager = "0.16"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

# Optimize for small WASM binary size
[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
